Added form with validators

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
         <form [formGroup]="volunteerform" (ngSubmit)="onSubmit()">
             <div class="border">
                 
-                <h2>Personal Informations</h2>
+                <h2>Personal Information</h2>
 
                 <div class="column">
                     <label for="name">Full name</label>
